--- a/.github/workflows/develop.deploy.yaml
+++ b/.github/workflows/develop.deploy.yaml
@@ -58,7 +58,7 @@ jobs:
         run: docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.CONTAINER_IMAGE }}
 
       - name: Push git changes
-        uses: ad-m/github-push-action@v2
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: develop
