--- a/.github/workflows/develop.deploy.yaml
+++ b/.github/workflows/develop.deploy.yaml
@@ -29,9 +29,8 @@ jobs:
       - name: Configures AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/github-actions-role
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
-          role-session-name: github-actions-session
 
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
